<resources>
    <string name="app_name">EzPad</string>
    <string name="invoice">Invoice</string>
    <string name="ongkir">Ongkir</string>
    <string name="autotext">Autotext</string>
    <string name="transaction">Transaction</string>
    <string name="dashboard">Dashboard</string>
    <string name="copy_your_invoice_here">copy your invoice here</string>
    <string name="alamat_try">Jl. Jend. Sudirman No.40, Kotabaru, Kec. Gondokusuman, Kota Yogyakarta, Daerah Istimewa Yogyakarta 55224</string>
    <string name="copy_invoice">Thank you for shopping with us! Order from EzPad stuff\n\nProduk :\n%sx Masker\n\nNama Pemesan:%s\nAlamat Pemesan:%s\nno Hp pemesan:%s\nTotal harga barang : Rp%s\nOngkos Kirim : Rp10.000\nTotal yang harus dibayarkan : %s\n\nPembayaran : BCA 532 atas nama muh Harap mengirimkan foto bukti transfer kepada kami, Thank you so much</string>
    <string name="submit">Submit</string>
    <string name="copied">copied</string>
    <string name="status">Transaksi</string>
    <string name="mutasi">Mutasi</string>
    <string name="belum_bayar">Belum Bayar</string>
    <string name="sudah_bayar">Sudah Bayar</string>
    <string name="siap_kirim">Siap Kirim</string>
    <string name="telah_kirim">Telah Dikirim</string>
    <string name="nomor_rekening">Nomor Rekening :</string>
    <string name="kredit">Kredit</string>
    <string-array name="kota">
        <item>Yogyakarta</item>
        <item>Jakarta</item>
        <item>Bogor</item>
        <item>Surabaya</item>
        <item>Bandung</item>
    </string-array>
    <string-array name="kota_id">
        <item>501</item>
        <item>152</item>
        <item>79</item>
        <item>444</item>
        <item>23</item>
    </string-array>
    <string-array name="berat">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
    </string-array>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_detail_transaksi">DetailTransaksiActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="invoicetest">Nama :danu Alamat :taman krajan blok a5 No hp :08213731623 Harga : 10000</string>
</resources>
